--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-13  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-resources-streams-disk-once.ads,
+	  aws-resources-streams-disk-once.adb:
+	Split CVS tags to avoid too long line.
+
 2003-11-12  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-resources-release.ads, aws-resources-release.adb:
