--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,17 @@
+2003-11-13  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(RT_SOAP_ASIS): Add wsdl_4.
+	
+	* wsdl_4.ads, wsdl_4.adb:
+	Initial revision.
+
+	* wsdl_4_main.adb, wsdl_4.out:
+	Initial revision.
+
+	* wsdl_4_server.ads, wsdl_4_server.adb:
+	Initial revision.
+
 2003-11-12  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
