--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,6 +1,11 @@
 2003-11-14  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* ada2wsdl-generator.adb:
+	(Write_Character): Output simpler Character schema definition.
+	
+2003-11-14  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* ada2wsdl-generator.adb:
 	(Write_Message): Handle cases where there is no output or not input.
 	(Write_Operation): Idem.
 	This handles properly Notification operations and Request-response
