--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,10 +1,16 @@
 2003-11-19  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* ada2wsdl-parser.adb:
+	(Type_Name): Fix regression introduced in previous check-in. Check
+	 for subtype of float to avoid introducing a schema definition.
+	
+2003-11-19  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* ada2wsdl-parser.adb:
 	(Type_Name): Properly check for Boolean special enumeration.
 	 Returns the right float type used (float, long_float or
 	 long_long_float).
-	
+
 2003-11-18  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* ada2wsdl-generator.adb:
