--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,3 +1,15 @@
+2003-11-23  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* soap-generator.adb:
+	(Generate_Safe_Array): New routine.
+	(Is_Inside_Record): Idem.
+	(Generate_Array): Handle properly safe array inside record when a
+	 user's spec is specified.
+	(Output_Types): Call Generate_Safe_Array here.
+
+	* soap-generator.ads:
+	(Version): Set to 1.3.
+
 2003-11-20  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* soap-generator.adb:
