Add:  - Add better support for constraint arrays in records. Actually all such    arrays is generated as unconstraint using the safe array pointer runtime    support.

--- a/docs/TODO
+++ b/docs/TODO
@@ -205,3 +205,7 @@ implemented:
 - AWS.OS_Lib for Win32 and POSIX based are not anymore working. We should
   either update the documentation or implement the missing routines for both
   versions.
+
+- Add better support for constraint arrays in records. Actually all such
+  arrays is generated as unconstraint using the safe array pointer runtime
+  support.
